# CareerForge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents_context/: AGENTS.md
agents_context/skills/interview-prep/: SKILL.md  examples.md  instructions.md
agents_context/skills/report-writer/: SKILL.md  examples.md  instructions.md
agents_context/skills/resume-tailoring/: SKILL.md  examples.md  instructions.md
src/careerforge/: __init__.py  agent.py  app.py  config.py  export.py  rendering.py  resilience.py  schemas.py  tools.py
tests/: test_agent.py  test_config.py  test_export.py  test_rendering.py  test_resilience.py  test_schemas.py  test_tools.py
