[project]
name = "careerforge"
version = "0.1.0"
description = "CareerForge — an AI career copilot built as a deep agent (LangGraph / deepagents)"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
dependencies = [
    "deepagents>=0.3.4",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langchain-groq>=1.1.1",
    "langchain-quickjs>=0.1.4",
    "tavily-python>=0.7.17",
    "python-dotenv>=1.2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "streamlit>=1.58.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careerforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
